--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,6 +5,9 @@ backend:
 media_folder: static/img
 public_folder: /img
 
+display_url: https://docs1.dmgtus.com
+publish_mode: editorial_workflow
+
 collections:
   - name: "blog"
     label: "Blog"
